--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,11 @@
 #
 #
 cmake_minimum_required(VERSION 3.21.0)
-project(course-rom VERSION 2.0.2)
+
+project(
+  course-rom
+  VERSION 1.0.0 )
+
 set(EXTRA_VERSION "")
 set(PROJECT_SHORTNAME "cr")
 
@@ -32,6 +36,9 @@ if (POLICY CMP0077)
   cmake_policy(SET CMP0077 NEW)
   set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
 endif()
+
+find_package(Python REQUIRED COMPONENTS Interpreter Development.Module)
+find_package(pybind11 CONFIG REQUIRED)
 
 find_package(Feel++ COMPONENTS Toolboxes PATHS ${FEELPP_DIR}/share/feelpp/feel/cmake/modules $ENV{FEELPP_DIR}/share/feelpp/feel/cmake/modules /usr/share/feelpp/feel/cmake/modules /usr/local/share/feelpp/feel/cmake/modules )
 if(NOT FEELPP_FOUND)
@@ -49,7 +56,7 @@ endif()
 
 
 add_subdirectory( src )
-add_subdirectory( docs )
+#add_subdirectory( docs )
 
 # extra ignored files
 list(APPEND CPACK_SOURCE_IGNORE_FILES
@@ -63,7 +70,7 @@ set(CPACK_PACKAGE_NAME "${PROJECT_NAME}-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSI
 set(CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION}${EXTRA_VERSION}")
 SET(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}${EXTRA_VERSION}-${CMAKE_SYSTEM_NAME}")
 set(CPACK_PACKAGE_DIRECTORY "${PROJECT_BINARY_DIR}/assets")
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Cemosis course-rom template application")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Cemosis feelpp-project template application")
 set(CPACK_PACKAGE_DESCRIPTION "Cemosis provides a Feel++ template application.")
 set(CPACK_PACKAGE_VENDOR "Cemosis")
 set(CPACK_PACKAGE_CONTACT "Christophe Prud'homme <christophe.prudhomme@cemosis.fr>")
