--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "private": true,
   "name": "course-rom",
-  "description": "The Course Rom documentation",
+  "description": "The Course ROM documentation",
   "version": "2.1.0",
   "license": "AGPL-3.0",
-  "author": "The Course Rom Team",
-  "homepage": "https://github.com/feelpp/course-rom#readme",
+  "author": "The Feel++ Course ROM Team",
+  "homepage": "https://github.com/feelpp/feelpp-project#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/feelpp/course-rom.git"
+    "url": "git+https://github.com/feelpp/feelpp-project.git"
   },
   "bugs": {
-    "url": "https://github.com/feelpp/course-rom/issues"
+    "url": "https://github.com/feelpp/feelpp-project/issues"
   },
   "contributors": [
     {
@@ -29,14 +29,16 @@
   "dependencies": {
     "@antora/cli": "^3.1",
     "@antora/collector-extension": "^1.0.0-alpha.3",
+    "@antora/site-generator": "^3.1",
     "@antora/site-generator-default": "^3.1",
-    "@asciidoctor/core": "~2.2.6",
-    "asciidoctor": "~2.2.6",
-    "asciidoctor-jupyter": "^0.7.0",
+    "@asciidoctor/core": "^2.2.6",
+    "asciidoctor": "^2.2.6",
+    "asciidoctor-jupyter": "^0.6.0",
     "asciidoctor-kroki": "^0.17.0",
     "handlebars": "^4.7.8",
     "handlebars-utils": "^1.0.6",
-    "@feelpp/asciidoctor-extensions": "1.0.0-rc.8"
+    "@feelpp/asciidoctor-extensions": "1.0.0-rc.8",
+    "downdoc": "1.0.2-stable"
   },
   "devDependencies": {
     "broken-link-checker": "^0.7.8",
